--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ cachetools==4.2.2
 certifi==2021.10.8
 charset-normalizer==2.0.12
 idna==3.3
+jaraco.context==4.1.1
+more-itertools==8.12.0
 python-dotenv==0.20.0
 python-telegram-bot==13.11
 pytz==2022.1
@@ -13,3 +15,5 @@ tornado==6.1
 tzdata==2022.1
 tzlocal==4.2
 urllib3==1.26.9
+wolframalpha==5.0.0
+xmltodict==0.12.0
