--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+anyio==3.6.1
+APScheduler==3.9.1
 argcomplete==2.0.0
 Beaker==1.10.0
 beautifulsoup4==4.11.0
 blivet==3.4.4
 blivet-gui==2.3.0
 Brlapi==0.8.4
+cachetools==5.2.0
+certifi==2022.6.15
 cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.11
@@ -17,13 +21,18 @@ distro==1.6.0
 fedora-third-party==0.10
 fros==1.1
 gpg==1.15.1
+h11==0.12.0
+httpcore==0.15.0
+httpx==0.23.0
 humanize==3.13.1
 idna==3.3
+jaraco.context==4.1.2
 langtable==0.0.58
 libcomps==0.1.18
 lxml==4.7.1
 Mako==1.1.4
 MarkupSafe==2.0.0
+more-itertools==8.13.0
 nftables==0.1
 olefile==0.46
 packaging==21.3
@@ -50,6 +59,9 @@ PySocks==1.7.1
 python-augeas==1.1.0
 python-dateutil==2.8.1
 python-meh==0.50
+python-telegram-bot==20.0a2
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
 pyudev==0.22.0
 pyxdg==0.27
 qrcode==7.3.1
@@ -57,6 +69,7 @@ regex==2022.6.2
 requests==2.27.1
 requests-file==1.5.1
 requests-ftp==0.3.1
+rfc3986==1.5.0
 rpm==4.17.0
 selinux==3.3
 sepolicy==3.3
@@ -64,8 +77,14 @@ setools==4.4.0
 simpleaudio==1.0.4
 simpleline==1.9.0
 six==1.16.0
+sniffio==1.2.0
 sos==4.3
 soupsieve==2.3.1
 systemd-python==234
 Tempita==0.5.2
+tornado==6.2
+tzdata==2022.1
+tzlocal==4.2
 urllib3==1.26.8
+wolframalpha==5.0.0
+xmltodict==0.13.0
