--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,19 @@
-anyio==3.6.1
-APScheduler==3.9.1
-argcomplete==2.0.0
-Beaker==1.10.0
-beautifulsoup4==4.11.0
-Brlapi==0.8.4
-cachetools==5.2.0
-certifi==2022.6.15
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.11
-chrome-gnome-shell==0.0.0
-click==8.0.4
-cryptography==36.0.0
-cupshelpers==1.0
-dasbus==1.6
-dbus-python==1.2.18
-distro==1.6.0
-fedora-third-party==0.10
-fros==1.1
-gpg==1.15.1
-h11==0.12.0
-httpcore==0.15.0
-httpx==0.23.0
-humanize==3.13.1
+APScheduler==3.6.3
+cachetools==4.2.2
+certifi==2021.10.8
+charset-normalizer==2.0.12
 idna==3.3
-jaraco.context==4.1.2
-langtable==0.0.58
-libcomps==0.1.18
-lxml==4.9.1
-Mako==1.1.4
-MarkupSafe==2.0.0
-more-itertools==8.13.0
-nftables==0.1
-olefile==0.46
-packaging==21.3
-Paste==3.5.0
-pexpect==4.8.0
-pid==2.2.3
-Pillow==9.1.0
-ply==3.11
-productmd==1.33
-ptyprocess==0.6.0
-pwquality==1.4.4
-pycairo==1.21.0
-pycparser==2.20
-pycrypto==2.6.1
-pycups==2.0.1
-pycurl==7.45.1
-pyenchant==3.2.2
-PyGObject==3.42.1
-pykickstart==3.36
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyparted==3.12.0
-PySocks==1.7.1
-python-augeas==1.1.0
-python-dateutil==2.8.1
-python-meh==0.50
-python-telegram-bot==20.0a2
+jaraco.context==4.1.1
+more-itertools==8.12.0
+python-dotenv==0.20.0
+python-telegram-bot==13.11
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
-pyudev==0.22.0
-pyxdg==0.27
-qrcode==7.3.1
-regex==2022.6.2
 requests==2.27.1
-requests-file==1.5.1
-requests-ftp==0.3.1
-rfc3986==1.5.0
-rpm==4.17.0
-selinux==3.3
-sepolicy==3.3
-setools==4.4.0
-simpleaudio==1.0.4
-simpleline==1.9.0
 six==1.16.0
-sniffio==1.2.0
-sos==4.3
-soupsieve==2.3.1
-systemd-python==234
-Tempita==0.5.2
-tornado==6.2
+tornado==6.1
 tzdata==2022.1
 tzlocal==4.2
-urllib3==1.26.8
+urllib3==1.26.9
 wolframalpha==5.0.0
-xmltodict==0.13.0
+xmltodict==0.12.0
